# cpp-pack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: conan.cmake  dependencies.cmake
doc/: CMakeLists.txt
docs/: CMakeLists.txt
lib/hello/: CMakeLists.txt  hello.cpp
libs/hello/: hello.test.cpp
libs/hello/include/hello/: hello.hpp
src/: CMakeLists.txt  main.cpp  run.cpp  run.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  integration.test.cpp
